--- a/mystream/streampage/templates/postDetails.html
+++ b/mystream/streampage/templates/postDetails.html
@@ -92,26 +92,76 @@
 	    </div>
 		{% load static %}
 		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 		<script type="text/javascript" src="{% static 'annotation/popup.js' %}"></script>
 		<script type="text/javascript" src="{% static 'annotation/annotation-model.js' %}"></script>
+
+        <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
+        <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.bundle.js' %}"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+
 		
-		<div id="dialog-form" title="Create Annotation" style="display: none;>
-			<p class="validateTips">All form fields are required.</p>
-			<textarea id="output" style="height:80em;width:60%;pointer-events:none; margin-left:20%;margin-top:5%"
-				placeholder="Web Annotation Data Model document appears here upon selection">
-			</textarea>
-			<form>
-				<fieldset>
-					<label for="target">Target</label>
-					<input type="text" name="target" id="target" value="" class="text ui-widget-content ui-corner-all">
-					<label for="body">Body</label>
-					<input type="text" name="body" id="body" value="" class="text ui-widget-content ui-corner-all">
-					<!-- Allow form submission with keyboard without duplicating the dialog button -->
-					<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
-				</fieldset>
-			</form>
-		</div>
+        <div id="popover-template">
+            <div class="popover" role="tooltip">
+                <div class="arrow"></div>
+                <h3 class="popover-header"></h3>
+                <div class="popover-body">
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <div id="annotation-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalLongTitle">Create Annotation</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+
+              <div id="annotation-modal-form" class="modal-body">
+
+                  <form>
+                      <div class="form-group">
+                        <label for="target">Target</label>
+                        <input type="text" class="form-control" id="target" >
+                      </div>
+                      <div class="form-group">
+                        <label for="body">Body</label>
+                        <input type="text" class="form-control" id="body" >
+                      </div>
+
+                      <div class="form-group">
+                        <label for="type">Type</label>
+                        <select class="form-control" id="type">
+                          <option value="Text">Text</option>
+                          <option value="Image" >Image</option>
+                          <option value="Video" >Video</option>
+                        </select>
+                      </div>
+
+                      <input type="hidden" class="form-control" id="canonical" >
+                      <input type="hidden" class="form-control" id="jsonAnnotation" >
+
+                      <div class="modal-footer">
+                          <button id="submit" type="submit" class="btn btn-primary">Create</button>
+                      </div>
+
+                    </form>
+              </div>
+
+            </div>
+          </div>
+        </div>
 
 {% endblock %}
