--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -57,91 +57,68 @@
 			</div>
 			<div class="right small">Created by: {{ posts.posttype.0.fieldCreator }} at {{ posts.posttype.0.fieldCreationDate }}
 			</div>
-			<div class="p-2">
+			<div>
 				<button type="button" class="btn btn-primary btn-sm small" ReportPost="Yes" id="ReportPost" hash="{{ comm.communityHash }}">
-						<i class="fas fa-exclamation-triangle small" aria-hidden="true"></i> 
+						<i class="fa fa-thumbs-up small" aria-hidden="true"></i> 
 						Report
 				</button>
 				<button type="button" class="btn btn-primary btn-sm small" SubscribePost="Yes" id="SubscribePost" hash="{{ comm.communityHash }}">
-						<i class="fas fa-stream small" aria-hidden="true"></i> 
+						<i class="fas fa-sign-in-alt small"></i> 
 						Subscribe
 				</button>
-				<button type="button" id = "deletePost" hash="{{ posts.postList.0.entryHash }}" class="btn btn-sm btn-outline-secondary small">
-					<i class="fa fa-trash" aria-hidden="true"></i>
-				</button>
-
 					
 			</div>
 		</div>
 		<!-- Card Body -->
 	<div class="card-body">
-	  <div class=" row">
-	  <table class="table small">
+	  <div class="modal-body row">
+	  <table class="table p-2">
 		<tr>
 			<tr>
 				{% for fields in posts.postList %}
+				 <td>
+					<div class="row p-2">
+						<div class="col-sm-15">
 							{% for types in posts.posttype %}
 								{% if types.name == fields.propertyName  %}
 									{% if types.relatedPrimitives.name  == "Image"  %}
-									  <td width="250px" >
 										<b>{{ fields.propertyName }}:&nbsp</b>
-										<img src="{{ fields.propertyValue }}" width="250px" height="200px">
-									  </td>
+										<img src="{{ fields.propertyValue }}" width="125" height="100" class="img-thumbnail">
 									{% elif types.relatedPrimitives.name  == "Location"%}
-									   <td width="250px" >
+									<div id="googleMap" style="width:20%;height:100px;"></div>
+									{% else %}
 										<b>{{ fields.propertyName }}:&nbsp</b>
-										<div id="googleMap" style="width:250px;height:200px;"></div>
-									   </td>
+										{{ fields.propertyValue }}
+										{{ types.relatedPrimitives.name }}
+										
 									{% endif %}
 								{% endif %}
 							{% endfor %}
+						</div>
+					</div>
+				</td>
 				{% endfor %}
 				<td>
-				{% for fields in posts.postList %}
-					{% for types in posts.posttype %}
-						{% if types.name == fields.propertyName  %}
-							{% if types.relatedPrimitives.name  != "Image" and types.relatedPrimitives.name  != "Location" and types.relatedPrimitives.name  != "Text Area" %}
-								<div class="row">
-									<b>{{ fields.propertyName }}:&nbsp</b>
-									{{ fields.propertyValue }}
-								</div>
-							{% endif %}
-						{% endif %}
-					{% endfor %}
-				{% endfor %}
-				<div class="row">
-					<a href="http://3.134.79.169:8000/streampage/showPostDetails/?postHash={{ posts.postList.0.entryHash }}">more >></a>	
-				</div>
-				<div class="row">
-					{{ fields.postTag }}
-				</div>
+					<div class="col-sm-2">
+						<button type="button" id = "deletePost" hash="{{ posts.postList.0.entryHash }}" class="btn btn-sm btn-outline-secondary"><i class="fa fa-trash" style="font-size:24px" aria-hidden="true"></i></button>
+					</div>
 				</td>
 			</tr>
 		  </table>
-		  <form id="{{ posts.postList.0.entryHash }}">
-			  <div class="row p-2 ">
-				  <div class="col-sm-10">
-					{% csrf_token %}
-					{{comment.as_p }}
-				   </div>
-				   <div class="col-sm-2 d-flex flex-row p-3">
-						<button type="button" id = "createComment" hash="{{ posts.postList.0.entryHash }}" class="btn btn-sm btn-outline-primary align-self-end p-2"><i class="fas fa-comments" style="font-size:24px" aria-hidden="true"></i> Send</button>
-				   </div>	
-			  </div>
-		   </form>
-	    </div>
-		<table class="small">
-		   {% for items in posts.comments %}
-		   <tr>
-			  <td width="25px"><b>{{ items.postCommentCreator }}:</b></td>
-			  <td width="250px">{{ items.commentText }}</td>
-			  <td width="250px">{{ items.postCommentCreationDate }}</td>
-		   </tr>
-		   {% endfor %}
-		   </table>
+		  <div class="row p-2 ">
+			  <div class="col-sm-10">
+				{% csrf_token %}
+				{{comment.as_p }}
+			   </div>
+			   <div class="col-sm-2 d-flex flex-row p-3">
+					<button type="button" id = "createComment" hash="{{ posts.0 }}" class="btn btn-sm btn-outline-primary align-self-end p-2"><i class="fas fa-comments" style="font-size:24px" aria-hidden="true"></i> Send</button>
+			   </div>
+		  </div>
+		  
+	  </div>
 	  </div>
    </div>
-   {% endfor %}
+	  {% endfor %}
 	 
 	
 <!-- Modal Add Posttype-->
