--- a/mystream/streampage/templates/postDetails.html
+++ b/mystream/streampage/templates/postDetails.html
@@ -91,77 +91,64 @@
 		 <table>
 	    </div>
 		{% load static %}
-		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
-		<script type="text/javascript" src="{% static 'annotation/popup.js' %}"></script>
-		<script type="text/javascript" src="{% static 'annotation/annotation-model.js' %}"></script>
-
-        <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
-        <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.bundle.js' %}"></script>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <link rel="stylesheet" href={% static "css/popup.css" %}>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
-		
-        <div id="popover-template">
-            <div class="popover" role="tooltip">
-                <div class="arrow"></div>
-                <h3 class="popover-header"></h3>
-                <div class="popover-body">
-                </div>
-            </div>
-        </div>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 
+    <script src="{% static 'annotation/popup.js' %}"></script>
+    <script src="{% static 'annotation/annotation-model.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<div id="annotation-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalLongTitle">Create Annotation</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
 
+      <div id="annotation-modal-form" class="modal-body">
 
-        <div id="annotation-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="modalLongTitle">Create Annotation</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
+          <form>
+              <div class="form-group">
+                <label for="target">Target</label>
+                <input type="text" class="form-control" id="target" >
+              </div>
+              <div class="form-group">
+                <label for="body">Body</label>
+                <input type="text" class="form-control" id="body" >
               </div>
 
-              <div id="annotation-modal-form" class="modal-body">
-
-                  <form>
-                      <div class="form-group">
-                        <label for="target">Target</label>
-                        <input type="text" class="form-control" id="target" >
-                      </div>
-                      <div class="form-group">
-                        <label for="body">Body</label>
-                        <input type="text" class="form-control" id="body" >
-                      </div>
-
-                      <div class="form-group">
-                        <label for="type">Type</label>
-                        <select class="form-control" id="type">
-                          <option value="Text">Text</option>
-                          <option value="Image" >Image</option>
-                          <option value="Video" >Video</option>
-                        </select>
-                      </div>
-
-                      <input type="hidden" class="form-control" id="canonical" >
-                      <input type="hidden" class="form-control" id="jsonAnnotation" >
-
-                      <div class="modal-footer">
-                          <button id="submit" type="submit" class="btn btn-primary">Create</button>
-                      </div>
-
-                    </form>
+              <div class="form-group">
+                <label for="type">Type</label>
+                <select class="form-control" id="type">
+                  <option value="Text">Text</option>
+                  <option value="Image" >Image</option>
+                  <option value="Video" >Video</option>
+                </select>
               </div>
 
-            </div>
-          </div>
-        </div>
+              <input type="hidden" class="form-control" id="canonical" >
+              <input type="hidden" class="form-control" id="jsonAnnotation" >
+
+              <div class="modal-footer">
+                  <button id="submit" type="submit" class="btn btn-primary">Create</button>
+              </div>
+
+            </form>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 {% endblock %}
