--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -822,6 +822,25 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 		});
     });
 	
+	//SUBSCRIBE POSTTYPE
+	$( "#SubscribePost" ).click(function() {
+		var Phash = $(this).attr('hash');
+		var data = new FormData();
+		data.append('post_Hash', Phash);
+		data.append('csrfmiddlewaretoken', $('input[name=csrfmiddlewaretoken]').val());
+		$.ajax({
+			type:'POST',
+			url: '/streampage/subscribePosttype/',
+			data: data,
+			processData: false,
+			contentType: false,
+			dataType: "html",
+			success: function(data, textStatus, jqXHR){
+				console.log(data)
+			}		
+		});
+	});
+	
 	
 });
 
