Main page activity stream listing trial

--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -853,7 +853,7 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
     <div id="content">
         <!-- Topbar -->
         <nav class="navbar navbar-expand navbar-light bg-primary topbar mb-4 static-top">
-		<a class="navbar-brand" href="http://3.134.79.169:8000/streampage/">
+		<a class="navbar-brand" href="http://3.134.79.169:8000/streampage/fetchActivities">
 			<img src="{% static 'uploads/logo/Logo.png' %}" width="55" height="55" class="d-inline-block align-top">
 			<img src="{% static 'uploads/logo/LogoText.png' %}" width="55" height="55" class="d-inline-block align-top">
 		</a>
