Activity streams have been added to index page

--- a/mystream/streampage/templates/index.html
+++ b/mystream/streampage/templates/index.html
@@ -8,7 +8,7 @@
         <div class="card-body">
 			<div class="modal-body row">
 				<div class="col-md-9 small">
-					<b>{{ activity }}</b>
+					<b>{{ activity.detail.actor.name }}</b>&nbsp;{{ activity.detail.type }}&nbsp;<b>{{ activity.detail.object.name }}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ activity.detail.published }}
 				</div>
 			</div>
 		</div>
