--- a/mystream/streampage/templates/postDetails.html
+++ b/mystream/streampage/templates/postDetails.html
@@ -54,7 +54,7 @@
 									{% if types.relatedPrimitives.name  == "Location"%}
 									   <td width="250px" >
 										<b>{{ fields.propertyName }}:&nbsp</b><br>
-										<div id="googleMap" style="width:250px;height:200px;"></div>
+										<div id="googleMap" googleMap='yes' style="width:250px;height:200px;" coordinates="{{ fields.propertyValue }}"></div>
 									   </td>
 									{% endif %}
 								{% endif %}
