--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -921,11 +921,14 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 		function myMap() {
 			myCoordinates = [];
 			$("div[googleMap='yes']").each(function() {
-				var lat = $(this).attr("coordinates").split(",")[0];
-				var lng = $(this).attr("coordinates").split(",")[1];
+				var lat = parseFloat($(this).attr("coordinates").split(",")[0]);
+				var lng = parseFloat($(this).attr("coordinates").split(",")[1]);
 				var mapProp = {center:new google.maps.LatLng(lat,lng), zoom:5,};
 				var map = new google.maps.Map(this,mapProp);
-				var myLoc = {lat: lat, lng: lng};
+				var myLoc = {};
+				myLoc['lat'] = lat;
+				myLoc['lng'] = lng;
+				console.log(myLoc);
 				var marker = new google.maps.Marker({position: myLoc, map: map});
 			});
 		}
