--- a/mystream/streampage/templates/community.html
+++ b/mystream/streampage/templates/community.html
@@ -72,11 +72,13 @@
 					{% csrf_token %}
 					{{form.as_p }}		
 				</div>
+				</form>
+				<div id="addCommunityTagDivision" class="modal-body p-3"></div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-					<button type="submit" class="btn btn-primary">Create</button>
+					<button type="click" id="createCommunityButton" class="btn btn-primary">Create</button>
 				</div>
-				</form>
+
 			</div>
 		</div>
 	</div>
