--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -160,6 +160,7 @@
 						{{form.as_p }}
 					</div>
 				</form>
+				<div id="addPosttypeTagDivision" class="modal-body p-3"></div>
 				<div id="editPosttypeButton" class="modal-body p-3">
 					<button type="button" id="createPosttypeButton" class="btn btn-sm btn-primary small"><i class="fa fa-save small" aria-hidden="true"></i> Save Definition</button>
 				</div>
@@ -233,7 +234,7 @@
 				</div>
 				<div id="returnedPostFields">
 				</div>
-				
+				<div id="addPostTagDivision" class="modal-body p-3"></div>
 				<div class="modal-footer justify-content-between">				
 						{% csrf_token %}
 					<button type="submit" id="SubmitPost" class="btn btn-outline-primary btn-sm mr-auto"><i class="fa fa-save" aria-hidden="true"></i> Submit Post</button>
