--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -235,6 +235,7 @@
 				<div id="returnedPostFields">
 				</div>
 				<div id="addPostTagDivision" class="modal-body p-3"></div>
+				<div id="map" class="modal-body p-3" style="height:500px; display:none;"></div>
 				<div class="modal-footer justify-content-between">				
 						{% csrf_token %}
 					<button type="submit" id="SubmitPost" class="btn btn-outline-primary btn-sm mr-auto"><i class="fa fa-save" aria-hidden="true"></i> Submit Post</button>
