--- a/mystream/streampage/templates/community.html
+++ b/mystream/streampage/templates/community.html
@@ -32,6 +32,9 @@
 						<i class="fas fa-sign-in-alt small"></i> 
 						Join
 					</button>
+					<button type="button" id = "deletePost" hash="{{ comm.communityHash  }}" class="btn btn-sm btn-outline-secondary small">
+						<i class="fa fa-trash" aria-hidden="true"></i>
+					</button>
 					
 				</div>
 			</div>
