--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -132,10 +132,12 @@
 	    </div>
 		<table class="small">
 		   {% for items in posts.comments %}
-		   <tr>
-			  <td width="25px"><b>{{ items.postCommentCreator }}:</b></td>
-			  <td width="250px">{{ items.commentText }}</td>
-			  <td width="250px">{{ items.postCommentCreationDate }}</td>
+		   <tr hash="{{items.commentHash}}">
+			  <td><img class="img-profile rounded-circle" src="/static/uploads/profiles/default.jpg"style="width:30px;height:30px;"></td>
+			  <td width="30px"><b>{{ items.postCommentCreator }}:</b></td>
+			  <td width="300px">{{ items.commentText }}</td>
+			  <td width="100px">{{ items.postCommentCreationDate }}</td>
+			  <td width="20px"><button type="button" id = "deleteComment" hash="{{items.commentHash}}" class="btn btn-sm btn-outline-secondary align-self-end p-2"><i class="fas fa-minus-circle" style="font-size:16px" aria-hidden="true"></i></button></td>
 		   </tr>
 		   {% endfor %}
 		   </table>
@@ -280,6 +282,28 @@
 		</div>
 	</div>
 	
+<!-- Modal Search Post -->
+	<div class="modal fade" id="ReportPostModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered modal" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h8 class="modal-title" >Report Post</h8>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div id="ReportPostBody" class="modal-body">
+					{% csrf_token %}
+					{{form.as_p }}		
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="click" id="createCommunityButton" class="btn btn-primary">Create</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	 
 	
 <div class="pagination">
