--- a/mystream/streampage/templates/postDetails.html
+++ b/mystream/streampage/templates/postDetails.html
@@ -79,10 +79,12 @@
 					   </form>
 					   <table class="small">
 					   {% for items in postEntries.postInstances.0.comments %}
-					   <tr>
-						  <td width="50px"><b>{{ items.postCommentCreator }}:</b></td>
-						  <td width="500px">{{ items.commentText }}</td>
-						  <td width="250px">{{ items.postCommentCreationDate }}</td>
+					   <tr hash="{{items.commentHash}}">
+					      <td><img class="img-profile rounded-circle" src="/static/uploads/profiles/default.jpg"style="width:30px;height:30px;"></td>
+						  <td><b>{{ items.postCommentCreator }}:</b></td>
+						  <td width="560px">{{ items.commentText }}</td>
+						  <td width="100px">{{ items.postCommentCreationDate }}</td>
+						  <td width="20px"><button type="button" id = "deleteComment" hash="{{items.commentHash}}" class="btn btn-sm btn-outline-secondary align-self-end p-2"><i class="fas fa-minus-circle" style="font-size:16px" aria-hidden="true"></i></td>
 					   </tr>
 					   {% endfor %}
 					</table>
