--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -903,18 +903,39 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 	
 //REPORT POST MODAL
 	$(document).on ("click", "#ReportPost", function (event) {
+		var Phash = $(this).attr("hash");
 		var requestFormData = {"FlagPost":"True"};
 		var reportPosttypeForm = $.zResponse("/streampage/reportPostModal",requestFormData);
 		$('#ReportPostBody').html(reportPosttypeForm);
 		$('#ReportPostTitle').html("Report Post");
+		$('#createPostReport').attr("hash",Phash);
 		$('#ReportPostModal').modal('show');
+	});
+
+//REPORT POST 
+	$(document).on ("click", "#createPostReport", function (event) {
+		var Phash = $(this).attr('hash');
+		var data = new FormData($('#reportFormTag').get(0));
+		data.append('post_Hash', Phash);
+		data.append('csrfmiddlewaretoken', $('input[name=csrfmiddlewaretoken]').val());
+		$.ajax({
+			type:'POST',
+			url: '/streampage/reportPost/',
+			data: data,
+			processData: false,
+			contentType: false,
+			dataType: "html",
+			success: function(data, textStatus, jqXHR){
+				alert(data);
+			}		
+	    });
 	});
 	
 });
 
+
 </script>
 
-	
 <body class=" bg-light">
 
 <!-- Main Content -->
