--- a/mystream/streampage/templates/community.html
+++ b/mystream/streampage/templates/community.html
@@ -32,10 +32,13 @@
 						<i class="fas fa-sign-in-alt small"></i> 
 						Join
 					</button>
-					<button type="button" id = "deletePost" hash="{{ comm.communityHash  }}" class="btn btn-sm btn-outline-secondary small">
+					<button type="button" id="Edit_Primitive" hash="{{ comm.communityHash  }}" class="btn btn-outline-secondary btn-sm">
+						<i class="fas fa-edit" aria-hidden="true"></i>
+					</button>
+					<button type="button" id = "deleteCommunity" hash="{{ comm.communityHash  }}" class="btn btn-sm btn-outline-danger small">
 						<i class="fa fa-trash" aria-hidden="true"></i>
 					</button>
-					
+
 				</div>
 			</div>
 			<!-- Card Body -->
