--- a/mystream/streampage/templates/community.html
+++ b/mystream/streampage/templates/community.html
@@ -32,7 +32,7 @@
 						<i class="fas fa-sign-in-alt small"></i> 
 						Join
 					</button>
-					<button type="button" id="Edit_Primitive" hash="{{ comm.communityHash  }}" class="btn btn-outline-secondary btn-sm">
+					<button type="button" id="Edit_Community" hash="{{ comm.communityHash  }}" class="btn btn-outline-secondary btn-sm">
 						<i class="fas fa-edit" aria-hidden="true"></i>
 					</button>
 					<button type="button" id = "deleteCommunity" hash="{{ comm.communityHash  }}" class="btn btn-sm btn-outline-danger small">
