--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -11,7 +11,11 @@
 			</div>			
 			<div class="">
 				Created by: {{ community.communityCreator }} at {{ community.communityCreationDate }}
+				<button type="button" id="Edit_Community" hash="{{ community.communityHash  }}" class="btn btn-outline-secondary btn-sm">
+						<i class="fas fa-edit" aria-hidden="true"></i>
+					</button>
 			</div>
+			
 		</div>
 		<br>
 		<div class="row">
