--- a/mystream/streampage/templates/community.html
+++ b/mystream/streampage/templates/community.html
@@ -62,7 +62,7 @@
 </div>
 <!-- Modal -->
 	<div class="modal fade" id="CommunityModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-		<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+		<div class="modal-dialog modal-dialog-centered modal-lg small" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<b><h8 class="modal-title" id="CommunityModalTitle"></h8></b>
@@ -78,8 +78,8 @@
 				</form>
 				<div id="addCommunityTagDivision" class="modal-body p-3"></div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-					<button type="click" id="createCommunityButton" class="btn btn-primary">Create</button>
+					<button type="button" class="btn btn-secondary small" data-dismiss="modal">Close</button>
+					<button type="click" id="createCommunityButton" class="btn btn-primary small">Create</button>
 				</div>
 
 			</div>
