--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -23,7 +23,7 @@
 				<img src="{{ community.communityPhoto }}" width="125" height="100" class="img-thumbnail"><br>
 			</div>
 			<div class="col-sm-9">
-				<p>{{ community.description }}</p>
+				<p id="CommunityMetaData">{{ community.description }}</p>
 				<p>{{ community.communityTags }}</p>
 			</div>
 		</div>
@@ -309,6 +309,32 @@
 			</div>
 		</div>
 	</div>
+	
+	<!-- Community Edit Modal -->
+	<div class="modal fade" id="CommunityEditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered modal-lg small" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<b><h8 class="modal-title" id="CommunityEditModalTitle"></h8></b>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<form method="post" action="" id="editCommunity" enctype="multipart/form-data">
+				<div id="communityEditModalBody" class="modal-body">
+					{% csrf_token %}
+					{{form.as_p }}		
+				</div>
+				</form>
+				<div id="addCommunityTagDivision" class="modal-body p-3"></div>
+				<div class="modal-footer small">
+					<button type="button" class="btn btn-secondary small" data-dismiss="modal">Close</button>
+					<button type="click" id="editCommunityButton" class="btn btn-primary small">Create</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	 
 	
